--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "script.js",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
